increased body margin-top to prevent overlapping

--- a/fl-menu.css
+++ b/fl-menu.css
@@ -1,3 +1,7 @@
+body {
+  margin-top: 50px;
+}
+
 #fl-menu * {
   box-sizing: border-box;
 }
